li gap fixed

--- a/estilos.css
+++ b/estilos.css
@@ -117,7 +117,7 @@ header .contenido{
 .menu {
     list-style: none;
     display: flex;
-    gap: 20px;
+    gap: 30px;
     padding: 5px;
 }
 
